--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   <body>
 
     <div class="top">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="/cv/images/cloud.png" alt="cloud-img">
       <h1>I'm Proloy</h1>
       <h2>a <span style="text-decoration: underline;">prog</span>rammer</h2>
 
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="bottom-cloud" src="/cv/images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="cloud-img">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img src="proloy.png" alt="Profile image" width=15% >
+          <img src="/cv/proloy.png" alt="Profile image" width=15% >
           <h2>Hello.</h2>
           <p class="skill-row">I have been passionate about the use of technology, since school.
             I started my professional career in the Computer hardware and Networking Industry.
