--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img src="/cv/proloy.png" alt="Profile image" width=15% >
+          <img src="/cv/Proloy.png" alt="Profile image" width=15% >
           <h2>Hello.</h2>
           <p class="skill-row">I have been passionate about the use of technology, since school.
             I started my professional career in the Computer hardware and Networking Industry.
