--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <h3>If you are looking to build an Internet Business</h3>
           <p class="skill-row">I am a passionate professional, and will definitely be able to support your initiative with both
           Marketing and Technology requirements.</p>
-          <button class="btn" type="button" name="button">Contact Me</button>
+          <button class="btn" href="mailto:proloymitra@gmail.com">Contact Me</button>
 
 
     </div>
